--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
 	</body>
 	
 	<?php
-		echo "matheus é lindo";
+		echo "Funciona por favor";
 	?>
 </html>
-
-<script>
-	alert("socorro");
-</script>
 
 
