--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>TESTE</title>
+		<title>MINHA API</title>
 
 		<!--JSON-->
 		<script type="text/javascript" src="Dados.json"></script>
